[package]
name = "four-wd-demo"
version = "0.1.0"
authors = ["Henk Dieter <henkdieter@tweedegolf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stm32f30x = "0.8.0"
cortex-m-rt = "0.6.12"
cortex-m = "0.6.2"
embedded-hal = "0.2.3"

[dependencies.stm32f30x-hal]
git = "https://github.com/hdoordt/stm32f30x-hal"
ref = "6b33f61"

[profile.dev]
opt-level = 1
debug = true # symbols are nice and they don't increase the size on Flash
lto = false # better optimizations

[profile.release]
opt-level = 3
codegen-units = 1 # less threads, better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
