[package]
name = "four-wd-demo"
version = "0.1.0"
authors = ["Henk Dieter <henkdieter@tweedegolf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.6.12"
cortex-m = "0.6.2"
embedded-hal = "0.2.3"
cortex-m-semihosting = "0.3.5"
nb = "0.1.2"
m = "0.1.1"
bare-metal = "0.2.5"
ring_buf = { git = "https://github.com/hdoordt/ring-buf-rs.git", branch = "master" }

[dependencies.stm32f3xx-hal]
version = "0.4.1"
features = ["stm32f303xc", "rt"]


[dependencies.heapless]
default-features = false
version = "0.3.7"


[profile.dev]
opt-level = 1
debug = true # symbols are nice and they don't increase the size on Flash
lto = false # better optimizations

[profile.release]
opt-level = 3
codegen-units = 1 # less threads, better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
